testsuite/tests/typecheck/should_fail/tcfail057.stderr

tcfail057.hs:5:7: error: [GHC-83865]
    • Expected a type, but ‘RealFrac a’ is a constraint
    • In the type signature: f :: (RealFrac a) -> a -> a
